<resources>
    <string name="app_name">Task Mate</string>
    <string name="waiting">Bekleyen</string>
    <string name="completed">Tamamlanan</string>
    <string name="empty_task">Empty Task</string>
    <string name="no_pending_task">Bekleyen Görev Yok</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_task">Yeni Görev</string>
    <string name="save">Kaydet</string>
    <string name="title">Başlık</string>
    <string name="contents">İçerik</string>
    <string name="date">Tarih</string>
    <string name="choose">Seç</string>
    <string name="notification">Bana bildir</string>
</resources>